Optimize calculator task queue Fix set details table not refreshing

--- a/SwtorOptimizer/ClientApp/src/app/components/pages/find-combination-task-details/find-combination-task-details.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/find-combination-task-details/find-combination-task-details.component.html
@@ -4,7 +4,7 @@
     <h4>Statut de la tâche : {{ task.statusDisplayName }}</h4>
     <h4 *ngIf="taskIsStarted()">Date de démarrage du calcul : {{ task.startDate | date: 'dd/MM/yyyy' }}</h4>
     <h4 *ngIf="taskIsEnded()">Durée d'exécution : {{ task.duration }}</h4>
-    <h4 *ngIf="taskIsStarted()">Nombre de combinaisons trouvées : {{ task.foundSets }}</h4>
+    <h4 *ngIf="taskIsStarted() || taskIsEnded()">Nombre de combinaisons trouvées : {{ task.foundSets }}</h4>
   </div>
   <button *ngIf="task && taskIsEnded() && task.foundSets > 0" mat-raised-button color="primary" (click)="toggleDetails()">
     {{ isDetailsVisible ? 'Masquer les détails' : 'Afficher les détails' }}
