--- a/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/home/home.component.html
@@ -45,9 +45,12 @@
       mon métier à l'un de mes jeux favoris pour me faciliter la tâche dans mes recherches de l'équipement optimal.
     </p>
     <p>
-      SWTOR Optimizer est une application permettant de calculer, en fonction d'un cap de statistique tertiaire à atteindre (alacrité, précision), le meilleur set de sophistications disponnible, cela afin de maximiser la puissance tout en supprimant le surplus de statistique
+      SWTOR Optimizer est une application permettant de calculer, en fonction d'un cap de statistique tertiaire à atteindre (alacrité, précision...), le meilleur set de sophistications disponnible, cela afin de maximiser la puissance tout en supprimant le surplus de statistique
       tertaire.
     </p>
+    <h3>Comment contribuer ?</h3>
+    <p>Si vous êtes un développeur, vous pouvez contribuer directement au code via une pull request sur <a href="https://github.com/Lowxorx/SwtorOptimizer" target="_blank">GitHub</a>.</p>
+    <p>Sinon, je ne recherche pas les donations. Cependant, si vous souhaitez faire un geste, vous pouvez toujours contribuer en utilisant <a href="http://www.swtor.com/r/Yh4DVM" target="_blank">mon lien de parrainage SWTOR</a>, si vous n'avez jamais été parrainné.</p>
     <h3>Comment on s'en sert ?</h3>
     <p>Pour calculer un cap, vous êtes sur la bonne page ! Entrez les détails du cap que vous souhaitez atteindre, appuyez sur le bouton <b>Calculer</b> et patientez.</p>
     <p>Pour voir tout les résultats des calculs déjà effectués, rendez-vous dans le menu latéral, et cliquez sur <b>Résultats</b>.</p>
