--- a/SwtorOptimizer/ClientApp/src/app/components/pages/admin/admin.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/pages/admin/admin.component.html
@@ -51,8 +51,11 @@
           <ng-container matColumnDef="action">
             <mat-header-cell *matHeaderCellDef class="actions-cell">Supprimer</mat-header-cell>
             <mat-cell *matCellDef="let element" class="actions-cell">
-              <button mat-icon-button aria-label="Supprimer la tâche" (click)="deleteTask(element)">
+              <button *ngIf="canDeleteTask(element.status)" mat-icon-button aria-label="Supprimer la tâche" (click)="deleteTask(element)">
                 <mat-icon>delete</mat-icon>
+              </button>
+              <button *ngIf="canStopTask(element.status)" mat-icon-button aria-label="Stopper la tâche" (click)="stopTask(element)">
+                <mat-icon>stop</mat-icon>
               </button>
             </mat-cell>
           </ng-container>
