--- a/SwtorOptimizer/ClientApp/src/app/components/widgets/admin/admin-tasks/admin-tasks.component.html
+++ b/SwtorOptimizer/ClientApp/src/app/components/widgets/admin/admin-tasks/admin-tasks.component.html
@@ -21,10 +21,10 @@
         </ng-container>
 
         <ng-container matColumnDef="action">
-          <mat-header-cell *matHeaderCellDef class="actions-cell">Supprimer</mat-header-cell>
+          <mat-header-cell *matHeaderCellDef class="actions-cell">Action</mat-header-cell>
           <mat-cell *matCellDef="let element" class="actions-cell">
             <button *ngIf="canDeleteTask(element.status)" mat-icon-button aria-label="Supprimer la tâche" (click)="deleteTask(element)">
-              <mat-icon>delete</mat-icon>
+              <mat-icon color="warn">delete</mat-icon>
             </button>
             <button *ngIf="canStopTask(element.status)" mat-icon-button aria-label="Stopper la tâche" (click)="stopTask(element)">
               <mat-icon>stop</mat-icon>
@@ -32,9 +32,17 @@
           </mat-cell>
         </ng-container>
 
+        <ng-container matColumnDef="noData">
+          <mat-footer-cell *matFooterCellDef [attr.colspan]="displayedColumns.length">Il n'y a pas de données disponibles.</mat-footer-cell>
+        </ng-container>
+
         <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+        <div *ngIf="tasksNumber > 0">
+          <mat-footer-row *matFooterRowDef="['noData']"></mat-footer-row>
+        </div>
       </mat-table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
     </div>
   </mat-card-content>
 </mat-card>
