--- a/SwtorOptimizer/ClientApp/src/app/components/widgets/admin/admin-accounts/admin-accounts.component.scss
+++ b/SwtorOptimizer/ClientApp/src/app/components/widgets/admin/admin-accounts/admin-accounts.component.scss
@@ -7,11 +7,7 @@ mat-card-title {
   }
 }
 
-.error-text {
-  margin: 8px;
-}
-
-.password-form {
+.admin-form {
   display: flex;
   justify-content: space-between;
   mat-form-field {
